test/negative/205_not_on_nonbool.fx
// expect: boolean
val b = !5
println(b)
