test/negative/205_not_on_nonbool.err
205_not_on_nonbool.fx:2:10: error: the argument of ! operator must be a boolean
 2 | val b = !5
   |          ^

1 errors occured during type checking.
